Add MS Exchange management shell snippets documentation and update navigation in mkdocs.yml

--- a/src/mkdocs.yml
+++ b/src/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
         - iSCSI - Basics: linux/iscsi.md
         - Proxmox Backup Server - pbs: linux/pbs.md
     - Windows:
+        - MS Exchange: windows/ms_exchange.md
         - DISM - Basics: windows/dism.md
         - CLI - Snippets: windows/win_cli.md
     - About/Imprint: imprint.md
