--- a/src/zensical.toml
+++ b/src/zensical.toml
@@ -102,17 +102,7 @@
 [project.markdown_extensions.pymdownx.tasklist]
     custom_checkbox = true
 
-[project.extra.consent]
-    title = "Cookie consent"
-    description = """
-        We use cookies to recognize your repeated visits and preferences, as well
-        as to measure the effectiveness of our documentation and whether users
-        find what they're searching for. With your consent, you're helping us to
-        make our documentation better.
-    """ 
-    actions = [
-        "accept",
-        "manage",
-        "reject",
-    ]
+[project.extra.consent.cookies]
+github.name = "Github"
+github.checked = false
 
